# hackergame2020-writeups

./: .gitignore  5.xlsx  README.md  writeup for beginners.md  初学者可以做上的题目的writeup
T-shirt/: README.md
archive/: README.md  announcements.md  core.json
behind-the-scenes/: README.md
official/2048/: README.md
official/2048/src/: Dockerfile  docker-compose.yml
official/233 同学的 Docker/: README.md
official/233 同学的 Docker/src/: Dockerfile
official/233 同学的字符串工具/: README.md  string_tool.py
official/Flag 计算机/: README.md
official/一闪而过的 Flag/: README.md
official/一闪而过的 Flag/src/: Untitled01.c
official/不经意传输/: README.md
official/不经意传输/src/: Dockerfile  OT.py  solve_ot.py
official/中间人/: README.md
official/中间人/src/: Dockerfile  MITM1.py  MITM2.py  MITM3.py  entry.py  mitm_exp1.py  mitm_exp2.py  mitm_exp3.py  utils.py
official/从零开始的 HTTP 链接/: README.md
official/从零开始的火星文生活/: README.md  tmp.txt
official/从零开始的火星文生活/files/: gibberish_message.txt
official/从零开始的火星文生活/src/: generate_and_solve.py
official/从零开始的记账工具人/: README.md
official/从零开始的记账工具人/src/: Dockerfile  docker-compose.yml
official/动态链接库检查器/: README.md
official/室友的加密硬盘/: README.md
official/普通的身份认证器/: README.md
official/普通的身份认证器/src/: README.md  index.html  jwt.key  jwt.key.pub  main.py  requirements.txt
official/来自一教的图片/: README.md
official/来自未来的信笺/: README.md
official/来自未来的信笺/src/: generate_qrcode.sh
official/永不溢出的计算器/: README.md
official/永不溢出的计算器/src/: Dockerfile  server.py
official/狗狗银行/: README.md
official/狗狗银行/src/: solution.py
official/猫咪问答++/: README.md
official/生活在博弈树上/: README.md
official/生活在博弈树上/src/: tictactoe  tictactoe.c
official/签到/: README.md
official/自复读的复读机/: README.md
official/自复读的复读机/src/: Dockerfile  checker.py  runner.py
official/证验码/: README.md  payload.py
official/证验码/files/: shuffle.py
official/证验码/src/: Dockerfile  docker-compose.yml
official/超基础的数理模拟器/: README.md
official/超基础的数理模拟器/src/: docker-compose.yml
official/超安全的代理服务器/: README.md
official/超简单的世界模拟器/: README.md
official/超简单的世界模拟器/src/: Dockerfile  game.py  solve.py
official/超简易的网盘服务器/: README.md
official/超简易的网盘服务器/src/: cloud.conf  docker-compose.yml  dockerfile  flag.txt  htpasswd  nginx.conf  php.ini  start.sh  supervisord.conf
official/超简陋的 OpenGL 小程序/: README.md
official/超简陋的 OpenGL 小程序/src/: .gitignore  CMakeLists.txt  README.md
official/超简陋的 OpenGL 小程序/src/main/: glHackergame.cpp
official/超简陋的 OpenGL 小程序/src/resource/: glCTFHappy_Noto_Blocks.blend
official/超简陋的 OpenGL 小程序/src/util/: README.md  converter.cpp
official/超精准的宇宙射线模拟器/: README.md
official/超精巧的数字论证器/: README.md
official/超自动的开箱模拟器/: README.md
official/超迷你的挖矿模拟器/: README.md
players/: README.md
players/Albanis/: README.md
players/GalaxySnail/: 05_从零开始的记账工具人.py  06_超简单的世界模拟器.py  07_从零开始的火星文生活.py  08_自复读的复读机.py  09_233同学的字符串工具.py  16_狗狗银行.py  17_超基础的数理模拟器.py  README.md
players/Haruka/: readme.md
players/Hykilpikonna/: README.md
players/NaiveTomcat/: 2020-11-07-dockerWP.md  2020-11-07-字符串工具WP.md  2020-11-07-狗狗银行WP.md  2020-11-07-超简陋的OpenGL小程序WP.md
players/NanoApe/: writeup.md
players/NekomuraAoi/: writeup.md
players/ProfFan/: writeup.md
players/WaterKing201030/: writeup.md
players/a-wing/: writeup.md
players/chuangzhu/: README.md
players/cytvictor/: writeup.md
players/gousaiyang/: writeup.md
players/hzqmwne/: README.md
players/lawvs/: README.md
players/mcfx/: writeup.md
players/met/: readme.md
players/ranwen/: wp.md
players/renbaoshuo/: README.md
players/sparkcyf/: writeup.md  从零开始的记账工具人-convert.xlsx
players/stefan0us/: writeup.md
(+131 files in other folders)
